# GameOfLife

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/utils/board/: Board.cpp  Board.h  Patterns.cpp  Patterns.h
src/utils/io/: RLEParser.cpp  RLEParser.h  RLEPattern.cpp  RLEPattern.h
src/utils/ui/: WindowManager.cpp  WindowManager.h
